--- a/xagent-ptp-wind/pom.xml
+++ b/xagent-ptp-wind/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <plugin.id>ptp_wind</plugin.id>
-        <plugin.class>xlink.xagent.ptp.wind.main.ZrPlugin</plugin.class>
+        <plugin.class>xlink.xagent.ptp.wind.main.WindPlugin</plugin.class>
         <plugin.version>0.0.1</plugin.version>
         <plugin.provider>xlink</plugin.provider>
         <plugin.dependencies/>
