定时获取openid 定义HwApi接口

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,8 @@
         <module>xagent-ptp-wind</module>
 		<module>xagent-ptp-wind</module>
         <module>xagent-ptp-wind</module>
-    </modules>
+		<module>xagent-ptp-huawei</module>
+	</modules>
 
 	<build>
 		<resources>
