--- a/xagent-ptp-huawei/pom.xml
+++ b/xagent-ptp-huawei/pom.xml
@@ -148,6 +148,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.2.2</version>
+        </dependency>
 
     </dependencies>
 
